--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.5",
+    "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.3.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
