--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prod": "next build && next start"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
