--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
+    "sharp": "^0.33.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
